[package]
name = "dm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
